k3s/k3s-trusted/workloads/servarr/radarr/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr
  namespace: radarr
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.home.balzers.xyz`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
      middlewares:
        - name: default-headers
  tls:
    secretName: home-balzers-xyz-tls
